@@ -14,24 +14,22 @@
 
 package com.amazonaws.serverless.function;
 
-
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 import com.amazonaws.serverless.dao.DynamoDBEventDao;
 import com.amazonaws.serverless.pojo.Team;
 import com.amazonaws.serverless.util.Consts;
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.amazonaws.serverless.domain.Event;
 import com.amazonaws.serverless.pojo.City;
 
+public final class EventFunctions {
 
-public class EventFunctions {
-
-    private static final Logger log = Logger.getLogger(EventFunctions.class);
-
+    private static final Logger log = LogManager.getLogger(EventFunctions.class);
     private static final DynamoDBEventDao eventDao = DynamoDBEventDao.instance();
 
 
@@ -43,56 +41,56 @@ public class EventFunctions {
         return events;
     }
 
-    public List<Event> getEventsForTeam(Team team) throws UnsupportedEncodingException {
-
-        if (null == team || team.getTeamName().isEmpty() || team.getTeamName().equals(Consts.UNDEFINED)) {
+    public List<Event> getEventsForTeam(Team team) {
+        if (team == null || team.getTeamName() == null || 
+            team.getTeamName().isEmpty() || team.getTeamName().equals(Consts.UNDEFINED)) {
             log.error("GetEventsForTeam received null or empty team name");
             throw new IllegalArgumentException("Team name cannot be null or empty");
         }
 
-        String name = URLDecoder.decode(team.getTeamName(), "UTF-8");
-        log.info("GetEventsForTeam invoked for team with name = " + name);
-        List<Event> events = eventDao.findEventsByTeam(name);
-        log.info("Found " + events.size() + " events for team = " + name);
+        var name = URLDecoder.decode(team.getTeamName(), StandardCharsets.UTF_8);
+        log.info("GetEventsForTeam invoked for team with name = {}", name);
+        var events = eventDao.findEventsByTeam(name);
+        log.info("Found {} events for team = {}", events.size(), name);
 
         return events;
     }
 
-    public List<Event> getEventsForCity(City city) throws UnsupportedEncodingException {
-
-        if (null == city || city.getCityName().isEmpty() || city.getCityName().equals(Consts.UNDEFINED)) {
+    public List<Event> getEventsForCity(City city) {
+        if (city == null || city.getCityName() == null || 
+            city.getCityName().isEmpty() || city.getCityName().equals(Consts.UNDEFINED)) {
             log.error("GetEventsForCity received null or empty city name");
             throw new IllegalArgumentException("City name cannot be null or empty");
         }
 
-        String name = URLDecoder.decode(city.getCityName(), "UTF-8");
-        log.info("GetEventsForCity invoked for city with name = " + name);
-        List<Event> events = eventDao.findEventsByCity(name);
-        log.info("Found " + events.size() + " events for city = " + name);
+        var name = URLDecoder.decode(city.getCityName(), StandardCharsets.UTF_8);
+        log.info("GetEventsForCity invoked for city with name = {}", name);
+        var events = eventDao.findEventsByCity(name);
+        log.info("Found {} events for city = {}", events.size(), name);
 
         return events;
     }
 
     public void saveOrUpdateEvent(Event event) {
-
-        if (null == event) {
+        if (event == null) {
             log.error("SaveEvent received null input");
             throw new IllegalArgumentException("Cannot save null object");
         }
 
-        log.info("Saving or updating event for team = " + event.getHomeTeam() + " , date = " + event.getEventDate());
+        log.info("Saving or updating event for team = {}, date = {}", 
+                event.getHomeTeam(), event.getEventDate());
         eventDao.saveOrUpdateEvent(event);
         log.info("Successfully saved/updated event");
     }
 
     public void deleteEvent(Event event) {
-
-        if (null == event) {
+        if (event == null) {
             log.error("DeleteEvent received null input");
             throw new IllegalArgumentException("Cannot delete null object");
         }
 
-        log.info("Deleting event for team = " + event.getHomeTeam() + " , date = " + event.getEventDate());
+        log.info("Deleting event for team = {}, date = {}", 
+                event.getHomeTeam(), event.getEventDate());
         eventDao.deleteEvent(event.getHomeTeam(), event.getEventDate());
         log.info("Successfully deleted event");
     }
